--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Library</h1>
-    <div>
+
       <button id="new-book-btn">Add New Book
       </button>
       <form action="#" id="new-book-form" style="display: none;">
@@ -23,7 +23,7 @@
         <input type="checkbox" id="read">
         <input type="submit" value="Add Book">
       </form>
-    </div>
+      <div id="library"></div>
 
 
     
