--- a/index.html
+++ b/index.html
@@ -4,26 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <title>HTML 5 Boilerplate</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Library</h1>
+    <div id="main">
+      <header>
+        <h1>Library</h1>
+        <div id="picture"></div>
+      </header>
 
-      <button id="new-book-btn">Add New Book
-      </button>
+      <button id="new-book-btn">Add New Book</button>
+
       <form action="#" id="new-book-form" style="display: none;">
-        <label for="title">Title</label>
-        <input type="text" id="title">
-        <label for="author">Author</label>
-        <input type="text" id="author">
-        <label for="pages">Pages</label>
-        <input type="number" id="pages">
-        <label for="read">Read</label>
-        <input type="checkbox" id="read">
-        <input type="submit" value="Add Book">
+        <h1>Add Book</h1>
+        <div>
+          <label for="title">Title</label>
+          <input type="text" id="title" class="info-input">
+          <label for="author">Author</label>
+          <input type="text" id="author" class="info-input">
+          <label for="pages">Pages</label>
+          <input type="number" id="pages" class="info-input" placeholder="12345">
+          <label for="read">Read</label>
+          <input type="checkbox" id="read" class="info-input">
+          <input type="submit" value="Add Book" id="add-book">
+        </div>
       </form>
+
+      <h2 >Books</h2>
       <div id="library"></div>
+
+    </div>
 
 
     
